@@ -109,6 +109,9 @@ API Changes
   CamelCase. For the features that were more likely to be used, we added a
   deprecation thunk, but not all. (John Arbash Meinel)
 
+* The Branch hooks pre_change_branch_tip no longer masks exceptions raised
+  by plugins - the original exceptions are now preserved. (Robert Collins)
+
 * The Transport ``Server.tearDown`` method is now renamed to
   ``stop_server`` and ``setUp`` to ``start_server`` for consistency with
   our normal naming pattern, and to avoid confusion with Python's
